# jahan

./: LICENSE  README.md  jahan.py  pyproject.toml  requirements.txt
jahan/: jahan.py
jahan/tests/: tests.py
server/: server.py
server/tests/: tests.py
src/jahan/: jahan.py
tests/: test_jahan.py  test_server.py
